--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veteran American Bank - Financial Services for Heroes</title>
+    <title>Veteran Alliance Bank - Financial Services for Heroes</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
                 <div class="nav-left">
                     <a href="#" class="logo">
                         <img src="https://picsum.photos/seed/vablogo/32/32.jpg" alt="VAB Logo" class="logo-image">
-                        Veteran American Bank
+                        Veteran Alliance Bank
                     </a>
                     <div class="nav-menu" id="navMenu">
                         <a href="#personal" class="nav-link">Personal Banking</a>
@@ -136,7 +136,7 @@
         <div class="container">
             <div class="customer-header">
                 <h2 class="customer-title">Trusted by Over 50,000 Veterans and Their Families</h2>
-                <p class="customer-subtitle">Join thousands of heroes who've chosen Veteran American Bank for their financial needs</p>
+                <p class="customer-subtitle">Join thousands of heroes who've chosen Veteran Alliance Bank for their financial needs</p>
             </div>
         </div>
     </section>
@@ -233,7 +233,7 @@
                                 <input type="email" class="email-input" placeholder="Enter your email address">
                                 <button class="btn btn-primary btn-large">Get Started</button>
                             </div>
-                            <p class="form-disclaimer">By signing up, you agree to receive communications from Veteran American Bank.</p>
+                            <p class="form-disclaimer">By signing up, you agree to receive communications from Veteran Alliance Bank.</p>
                         </div>
                     </div>
                     <div class="trust-indicators">
@@ -469,7 +469,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Stories from Our Veterans</h2>
-                <p class="section-subtitle">Hear from those who've made Veteran American Bank their financial partner</p>
+                <p class="section-subtitle">Hear from those who've made Veteran Alliance Bank their financial partner</p>
             </div>
             <div class="testimonials-grid">
                 <div class="testimonial-card">
@@ -545,7 +545,7 @@
                 <div class="footer-brand">
                     <div class="footer-logo">
                         <img src="https://picsum.photos/seed/vablogowhite/32/32.jpg" alt="VAB Logo" class="footer-logo-image">
-                        Veteran American Bank
+                        Veteran Alliance Bank
                     </div>
                     <p class="footer-description">
                         Serving those who served with honor, integrity, and excellence in banking. Member FDIC. Equal Housing Lender.
@@ -599,7 +599,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Veteran American Bank. All rights reserved. | Privacy Policy | Terms of Service | Disclosures</p>
+                <p>&copy; 2024 Veteran Alliance Bank. All rights reserved. | Privacy Policy | Terms of Service | Disclosures</p>
             </div>
         </div>
     </footer>
