Replace logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="nav-container">
                 <div class="nav-left">
                     <a href="#" class="logo">
-                        <img src="https://picsum.photos/seed/vablogo/32/32.jpg" alt="VAB Logo" class="logo-image">
+                        <img src="/vab real.jpg" alt="VAB Logo" class="logo-image">
                         Veteran Alliance Bank
                     </a>
                     <div class="nav-menu" id="navMenu">
