Remove emoji from banner text

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <body>
     <div class="top-banner">
         <div class="banner-content">
-            <span>🎯 Military-Grade Banking for Those Who Served</span>
-            <button class="banner-close">&times;</button>
-        </div>
+            <span>Military-Grade Banking for Those Who Served</span>
+            </div>
     </div>
 
     <header class="header">
