--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
+
+ <link rel="icon" type="image/png" href="VAB REAL.png">
+
+<meta property="og:title" content="The Veteran Alliance Bank">
+<meta property="og:description" content="The Veteran Alliance Bank.">
+<meta property="og:image" content="https://the-vab.github.io/Test/VAB REAL.png">
+<meta property="og:image:width" content="1200"> 
+<meta property="og:image:height" content="630"> 
+<meta name="twitter:card" content="summary_large_image">
+
+
 </head>
 <body>
     <div class="top-banner">
