Revise hero section with new messaging and layout
Updated hero section content and styling.

--- a/index.html
+++ b/index.html
@@ -54,33 +54,69 @@
         </nav>
     </header>
 
-    <section class="hero">
+  <section class="hero">
         <div class="container">
             <div class="hero-grid">
-                <div class="hero-content">
-                    <h1 class="hero-title">Banking That Doesn't Suck</h1>
+                <div class="hero-content" style="text-align: left;">
+                    
+                    <div class="hero-pill-badge">
+                        <i class="fas fa-star" style="color: #FFD700; font-size: 0.8em;"></i>
+                        THE ONLY BANK ENTIRELY STAFFED BY US MILITARY VETERANS
+                    </div>
+
+                    <h1 class="hero-title">
+                        We're Not Your 9-to-5<br>
+                        Suit & Tie Bankers.
+                    </h1>
+                    
                     <p class="hero-description">
-                        Real banking products for real military life. No corporate nonsense, just solutions that actually work because we've been there, done that.
+                        We're the veterans who actually get it. No corporate BS, just real banking for real military life. We don't sleep... 'til the mission's complete.
                     </p>
+
                     <div class="hero-form">
                         <form class="email-capture">
                             <div class="input-group">
-                                <input type="email" placeholder="What's your service email?" class="email-input" required>
-                                <button type="submit" class="btn btn-primary btn-large">Get started</button>
+                                <input type="email" placeholder="Your military or civilian email" class="email-input" required>
+                                <button type="submit" class="btn btn-primary btn-large">JOIN THE ALLIANCE!</button>
                             </div>
-                            <p class="form-disclaimer">No credit card required • 5-minute setup</p>
+                            <p class="form-disclaimer">
+                                No BS required • Real veterans answer the phones • We actually served
+                            </p>
                         </form>
                     </div>
+
+                    <div class="hero-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">100%</span>
+                            <span class="stat-label">Veteran staff</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">10K+</span>
+                            <span class="stat-label">Veterans & families served</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">$500M+</span>
+                            <span class="stat-label">Total assets managed</span>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="hero-visual">
                     <div class="hero-image">
                         <div class="card-showcase">
                             <div class="metal-card">
                                 <div class="card-design">
                                     <div class="card-chip"><i class="fas fa-microchip"></i></div>
-                                    <div class="card-logo"><i class="fas fa-shield-alt"></i><span>VAB</span></div>
-                                    <div class="card-number"><span>4532</span><span>••••</span><span>••••</span><span>8765</span></div>
-                                    <div class="card-details"><div class="card-name">VETERAN ALLIANCE</div><div class="card-expiry">MM/YY</div></div>
+                                    <div class="card-logo">
+                                        <i class="fas fa-shield-alt"></i><span>VAB</span>
+                                    </div>
+                                    <div class="card-number">
+                                        <span>4532</span><span>••••</span><span>••••</span><span>8765</span>
+                                    </div>
+                                    <div class="card-details">
+                                        <div class="card-name">VETERAN ALLIANCE</div>
+                                        <div class="card-expiry">MM/YY</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
