Add top banner for military-grade banking
Added a top banner with military-themed content.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
 </head>
 <body>
-
+<div class="top-banner">
+        <div class="banner-content">
+            <i class="fas fa-shield-alt" style="color: #FFD700; margin-right: 10px;"></i>
+            <span>Military-Grade Banking for Those Who Served</span>
+        </div>
+    </div>
     <header class="header">
         <nav class="nav">
             <div class="nav-container">
