--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="nav-right">
                     <button class="btn btn-ghost">Sign in</button>
-                    <button class="btn btn-primary" style="background-color: var(--tac-navy);">JOIN_THE_ALLIANCE</button>
+                    <button class="btn btn-primary" style="background-color: var(--tac-navy);">JOIN THE ALLIANCE</button>
                     <button class="mobile-menu-toggle">
                         <span></span><span></span><span></span>
                     </button>
@@ -66,7 +66,7 @@
                         <form class="email-capture">
                             <div class="input-group">
                                 <input type="email" placeholder="Your military or civilian email" class="email-input" required>
-                                <button type="submit" class="btn btn-primary btn-large" style="background-color: var(--tac-navy);">JOIN THE ALLIANCE!</button>
+                                <button type="submit" class="btn btn-primary btn-large" style="background-color: var(--tac-red);">JOIN THE ALLIANCE!</button>
                             </div>
                             <p class="form-disclaimer">
                                 No BS required • Real veterans answer the phones • We actually served
