Modify card name and add personal banker section
Updated card name and added personal banker section with details.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         <span>4532</span><span>••••</span><span>••••</span><span>8765</span>
                                     </div>
                                     <div class="card-details">
-                                        <div class="card-name">VETERAN ALLIANCE</div>
+                                        <div class="card-name">JOHN SCHMEDLAP </div>
                                         <div class="card-expiry">MM/YY</div>
                                     </div>
                                 </div>
@@ -134,6 +134,58 @@
                     <div class="ribbon-item"><div class="veteran-logo"><i class="fas fa-mountain"></i><span>10th Mountain</span></div></div>
                     <div class="ribbon-item"><div class="veteran-logo"><i class="fas fa-user-ninja"></i><span>Ranger Up</span></div></div>
                 </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="personal-banker-section">
+        <div class="container">
+            <div class="section-header">
+                <h2>We Are Your Personal Banker</h2>
+                <p>No call centers, no automated systems. Just real veteran bankers who know your name, understand your mission, and answer the damn phone.</p>
+            </div>
+
+            <div class="banker-grid">
+                <div class="banker-card">
+                    <div class="step-badge">1</div>
+                    <div class="icon-circle"><i class="fas fa-user-shield"></i></div>
+                    <h3>VETERAN MATCHING</h3>
+                    <p>Get matched with a personal banker who's actually served. No more explaining military life to civilians.</p>
+                    <div class="banker-sub-list">
+                        <span>Veteran-to-Veteran</span>
+                        <span>Shared Experience</span>
+                        <span>Deployment & VA Expert</span>
+                    </div>
+                </div>
+
+                <div class="banker-card">
+                    <div class="step-badge">2</div>
+                    <div class="icon-circle"><i class="fas fa-map-marked-alt"></i></div>
+                    <h3>MISSION PLANNING</h3>
+                    <p>We create your custom financial strategy. Mission planning approach for your financial future.</p>
+                    <div class="banker-sub-list">
+                        <span>We Listen First</span>
+                        <span>Custom Strategy</span>
+                        <span>Real Phone Support</span>
+                    </div>
+                </div>
+
+                <div class="banker-card">
+                    <div class="step-badge">3</div>
+                    <div class="icon-circle"><i class="fas fa-concierge-bell"></i></div>
+                    <h3>CONCIERGE SERVICE</h3>
+                    <p>Ultra-wealthy banking experience, now for veterans. Priority service that you've actually earned.</p>
+                    <div class="banker-sub-list">
+                        <span>Direct Access</span>
+                        <span>Priority Processing</span>
+                        <span>Proactive Guidance</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="no-call-center-banner">
+                <div class="status-light"></div>
+                <span>NO CALL CENTERS • NO AUTOMATED SYSTEMS • REAL VETERANS WHO ANSWER</span>
             </div>
         </div>
     </section>
