Refactor hero section card design and logo
Updated the card design and logo in the hero section of the HTML. Removed unnecessary whitespace and adjusted the structure of the personal banker section.

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                     <div class="hero-image">
                         <div class="card-showcase">
                             <div class="metal-card">
-                                <div class="card-design">
+                               <div class="card-design">
                                     <div class="card-chip"><i class="fas fa-microchip"></i></div>
-                                    <div class="card-logo">
-                                        <i class="fas fa-shield-alt"></i><span>VAB</span>
+                                      <div class="card-logo">
+                                        <img src="images/vab-patch-logo.png" alt="The Veteran Alliance Bank Logo" class="card-logo-img">
                                     </div>
                                     <div class="card-number">
                                         <span>4532</span><span>••••</span><span>••••</span><span>8765</span>
@@ -114,7 +114,6 @@
             </div>
         </div>
     </section>
-
     <section class="veteran-business-ribbon">
         <div class="ribbon-container">
             <div class="ribbon-track">
@@ -137,8 +136,7 @@
             </div>
         </div>
     </section>
-    
-    <section class="personal-banker-section">
+        <section class="personal-banker-section">
         <div class="container">
             <div class="section-header">
                 <h2>We Are Your Personal Banker</h2>
