--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                <div class="card-design">
                                     <div class="card-chip"><i class="fas fa-microchip"></i></div>
                                       <div class="card-logo">
-                                        <img src="images/vab-patch-logo.png" alt="The Veteran Alliance Bank Logo" class="card-logo-img">
+                                        <img src="images/USLogo.png" alt="The Veteran Alliance Bank Logo" class="card-logo-img">
                                     </div>
                                     <div class="card-number">
                                         <span>4532</span><span>••••</span><span>••••</span><span>8765</span>
