--- a/index.html
+++ b/index.html
@@ -187,7 +187,52 @@
             </div>
         </div>
     </section>
+<section class="banking-features-section">
+        <div class="container">
+            <div class="banker-grid">
+                <div class="banker-card">
+                    <div class="step-badge">1</div>
+                    <div class="icon-circle"><i class="fas fa-user-shield"></i></div>
+                    <h3>SECURE YOUR ACCOUNT</h3>
+                    <p>Military-grade security with 24/7 monitoring and fraud protection designed for your peace of mind.</p>
+                    <div class="feature-checklist">
+                        <div class="check-item"><i class="fas fa-check"></i> Zero Liability Protection</div>
+                        <div class="check-item"><i class="fas fa-check"></i> Biometric Auth</div>
+                    </div>
+                </div>
 
+                <div class="banker-card">
+                    <div class="step-badge">2</div>
+                    <div class="icon-circle"><i class="fas fa-chart-line"></i></div>
+                    <h3>GROW YOUR SAVINGS</h3>
+                    <p>Higher interest rates and special programs for military families to build your financial future.</p>
+                    <div class="feature-checklist">
+                        <div class="check-item"><i class="fas fa-check"></i> 2.5% APY on Savings</div>
+                        <div class="check-item"><i class="fas fa-check"></i> No Monthly Fees</div>
+                    </div>
+                </div>
+
+                <div class="banker-card">
+                    <div class="step-badge">3</div>
+                    <div class="icon-circle"><i class="fas fa-mobile-alt"></i></div>
+                    <h3>BANK ANYWHERE</h3>
+                    <p>Award-winning mobile banking app designed for deployment and frequent relocations.</p>
+                    <div class="feature-checklist">
+                        <div class="check-item"><i class="fas fa-check"></i> Mobile Check Deposit</div>
+                        <div class="check-item"><i class="fas fa-check"></i> Bill Pay Automation</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="award-banner">
+                <i class="fas fa-trophy award-icon"></i>
+                <div class="award-text">
+                    <strong>VETERAN BANKING EXCELLENCE AWARD 2024</strong>
+                    <span>Recognized as the #1 bank for military personnel by Military Times</span>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="product-suite">
         <div class="container">
             <div class="section-header">
